dons_tests/valid_kxi/instanced_static.kxi
class MyClass {
    static public int x;
}
void main(){
    MyClass c = new MyClass();
    int y = c.x;
}
