dons_tests/invalid_kxi/double_dec_main.kxi

            class main { 
                public int x;
                static public char y;
                main(int a, int b) {}
                public int[] myfunc() {}
            }
            void main(){}
